syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcServiceNotes";

package NotesMicroservice;

service NotesService
{
	rpc Save (AddNote) returns (Note);
	rpc GetAll (Empty) returns (SimplifiedNotes);
	rpc GetOne (RequestId) returns (Note);
	rpc Delete (RequestId) returns (Empty);
	rpc DeleteChecked (Empty) returns (Empty);
	rpc ChangeState (NoteState) returns (Note);
	rpc Update (ModifiedNote) returns (Note);
}
message Empty {}
message RequestId
{
  string Id = 1;
}
message AddNote
{
  string Title = 1;
}
message NoteState
{
    string Id = 1;
    int32 State = 2;
}
message ModifiedNote
{
    string Id = 1;
    string Title = 2;
    int32 State = 3;
}
message Note
{
  string Id = 1;
  string Title = 2;
  int32 State = 3;
  string NotesListId = 4;
  string Creator = 5;
  Timestamp CreationDate = 6;
  string Updater = 7;
  Timestamp LastUpdateDate = 8;
}
message SimplifiedNotes
{
    repeated SimplifiedNote SimplifiedNotes = 1;
}
message SimplifiedNote
{
    string Id = 1;
    string Title = 2;
    int32 State = 3;
    string NoteListId = 4;
}